# mcp_server_github_issues

./: .gitignore  LICENSE  QUICKSTART.md  README.md  pyproject.toml  validate.py
src/: config.py  server.py
src/git_ops/: clone.py  fs_validate.py
src/github/: client.py  models.py  query_builder.py
src/pr/: api.py  guidance.py
src/utils/: detect_project.py  errors.py  logging_config.py  redact.py
tests/: test_fs_validate.py  test_mcp_tools.py  test_query_builder.py  test_rate_limiting.py  test_redact.py
